--- a/PFlowsPaperv2/PFlowsPaper.tex
+++ b/PFlowsPaperv2/PFlowsPaper.tex
@@ -341,7 +341,7 @@ EXPLAIN HERE WHAT MIN COST AND MAX COSTS MEAN OR ARE CONSIDERED
 \begin{figure}[H]
 	\centering
 	%	\begin{subfigure}[t]{0.5\linewidth}
-	\includegraphics[width=1\linewidth, trim={0cm 0cm 0cm 0cm},clip]{Figures/Results_PlotSummary.pdf} 
+	\includegraphics[width=0.9\linewidth, trim={0cm 0cm 0cm 0cm},clip]{Figures/Results_PlotSummary.pdf} 
 	\caption{Phosphorus recovered and phosphorus recovery cost in the province of Ontario by flow. Note that the scale of broken x-axis is different.}
 	\label{fig:Results_PlotSummary}
 \end{figure}
@@ -349,20 +349,22 @@ EXPLAIN HERE WHAT MIN COST AND MAX COSTS MEAN OR ARE CONSIDERED
 \begin{figure}[H]
 	\centering
 	%	\begin{subfigure}[t]{0.5\linewidth}
-	\includegraphics[width=1\linewidth, trim={0cm 0cm 0cm 0cm},clip]{Figures/Results_PlotSummarySpecific.pdf} 
+	\includegraphics[width=0.9\linewidth, trim={0cm 0cm 0cm 0cm},clip]{Figures/Results_PlotSummarySpecific.pdf} 
 	\caption{Average phosphorus recovered and average phosphorus recovery cost per kilogram of phosphorus recovered in the province of Ontario by flow.}
 	\label{fig:Results_PlotSummarySpecific}
 \end{figure}
 
 \subsubsection{Agricultural sector}
-Manure is an agricultural flow from which effective phosphorus recovery might be achieved since it can be collected from the itensive livestock facilities and further treated \citep{schoumans2010phosphorus}.
-Phosphorus recovery from manure is highly influenced by the economies of scale and, therefore, by the scale of the CAFOs \citep{martin2021geospatial}. Since no data on the size distribution of CAFOs in Ontario is available, the average sizes of livestock facilities reported by \citet{CAFOSAvgSize} for the year 2019 are considered, resulting in average sizes for cattle, swine, pultry and other livestock facilities of 98, 168, 15 and 16 animal units respectively.
-Phosphorus is divided between the liquid and solid fractions of manure, being the solid fraction the one containing the largest amount of phosphorus, and thus the fraction from which larger quantities amounts of phosphorus can be recovered with lower costs, as observed in Figure \ref{fig:Results_PlotSummary}. However, it must be noted that phosphorus recovery from solid manure involved more complex processes that include the incineration of the waste, which in turn makes the process more energy intensive and may result in environmentally harmful emissions of gases. Cattle manure contains the larges amount of phosphorus as a consequence of being the largest manure flow, followed by swine and poultry manure. However, the comparison of the average phosphorus recovery costs per kilogram of phosphorus recovered shows that phosphorus recovery from swine liquid manure is lowest. This is due to the size of the swine intensive facilities, which in average are comprised by a larger number of animal units that cattle intensive facilities. This reveals the important role of the economies of scale in phosphorus recovery. Moreover, the small size of the CAFOs in Ontario result in high phosphorus recovery costs, whose values range between 200 and 700 EUR/kg P recovered. These costs are significantly higher than the phosphorus recovery costs reported by \citet{martin2022analysis} for the comparatively larger CAFOs of the U.S. states in the Great Lakes area, which average sizes range from 630 and 2,600 animal units, resulting in phosphorus recovery costs between 13 and 73 USD/kilogram of phosphorus recovered. The phosphorus recovery efficiency is similar for all livestock types since all the process selected is the modular physical separation system due to the small scale of the livestock facilities in Ontario. For the case of solid manure it can be observed that all livestock types show a similar average phosphorus recovery cost as a result of the lack of data to stimate the effect of the economies of scale of these processes.
+Manure is an agricultural flow from which effective phosphorus recovery might be achieved since it can be collected from the intensive livestock facilities and further treated \citep{schoumans2010phosphorus}. The inventory of cattle, swine, poultry, and other livestock for Ontario in 2019 is 1,376,984, 506,768, 148,508, and 135,725 animal units respectively, resulting in the release of 13,274, 8,569, 6,457, and 2,283 metric tonnes of phosphorus per year through manure respectively.
+Phosphorus recovery from manure is highly influenced by the economies of scale and, therefore, by the scale of the CAFOs \citep{martin2021geospatial}. Since no data on the size distribution of CAFOs in Ontario is available, the average sizes of livestock facilities reported by \citet{CAFOSAvgSize} for the year 2019 are considered, resulting in average sizes for cattle, swine, pultry and other livestock (primarily sheep and lambs) facilities of 98, 168, 15 and 16 animal units respectively. The number of cattle, swine, poultry, and other livestock CAFOs obtained is 14,051, 3,022, 10,069, and 8,636 respectively, which is in alignment with the number of livestock facilities reported by \citet{CAFOSAvgSizeAndNumber}.
+
+% animal units for year 2019, which result in the release of 15,923 kt of manure per year and 13.27 kt of phosphorus per year, and for swine represent 506,768 animal units, 5,779 kt of manure per year, and 8.57 kt of phosphorus per year REF. 
+Phosphorus is divided between the liquid and solid fractions of manure, being the solid fraction the one containing the largest amount of phosphorus, and thus the fraction from which larger quantities amounts of phosphorus can be recovered with lower costs, as observed in Figure \ref{fig:Results_PlotSummary}. However, it must be noted that phosphorus recovery from solid manure involved more complex processes that include the incineration of the waste, which in turn makes the process more energy intensive and may result in environmentally harmful emissions of gases. Cattle manure contains the larges amount of phosphorus as a consequence of being the largest manure flow, followed by swine and poultry manure. However, the comparison of the average phosphorus recovery costs per kilogram of phosphorus recovered shows that phosphorus recovery from swine liquid manure is lowest, as shown in Figure \ref{fig:Results_PlotSummarySpecific}. This is due to the size of the swine intensive facilities, which in average are comprised by a larger number of animal units that cattle intensive facilities. This reveals the important role of the economies of scale in phosphorus recovery. Moreover, the small size of the CAFOs in Ontario result in high phosphorus recovery costs, whose values range between 200 and 700 EUR/kg P recovered. These costs are significantly higher than the phosphorus recovery costs reported by \citet{martin2022analysis} for the comparatively larger CAFOs of the U.S. states in the Great Lakes area, which average sizes range from 630 and 2,600 animal units, resulting in phosphorus recovery costs between 13 and 73 USD/kilogram of phosphorus recovered. The phosphorus recovery efficiency is similar for all livestock types since all the process selected is the modular physical separation system due to the small scale of the livestock facilities in Ontario. For the case of solid manure it can be observed that all livestock types show a similar average phosphorus recovery cost as a result of the lack of data to stimate the effect of the economies of scale of these processes.
 %determined that the implementation of struvite production processes at livestock facilities is mainly driven by the scale of the CAFO, and thus they can be divided by into three clusters regarding the type of phosphorus recovery processes implemented, i.e., facilities with capacity for between 300 and 2,000 animal units, for between 2,000 and 5,000 animals units, and facilities large than 5,000 animal units. An animal unit (AU) is defined as an animal equivalent of 1,000 pounds (453.6 kg) live weight \citep{animal_unit_definition}. The most suitable phosphorus recovery for process for the facilities of each one of these clusters was determined by \citet{martin2021geospatial}, resulting in that  Multiform-type processes are the most suitable struvite produciton system for the cluster including the small-size CAFOs cluster (300-2,000 AUs), NuReSys-type systems are suitable for medium-size CAFOs (2,00-5,000 AUs), while that the suitable struvite system for large-scale CAFOs is Crystalactor-type processes. The investment and operating cost of these systems is collected in Table ?REF?.
 %
 %The number of cattle animals is reported by the Census of Agriculture at Census Division level REF, but no available data on CAFOs size is available for the province of Ontario. Since this information is essential to determine the suitable phopshorus recovery process to be considered, and in turn the phosphorus recovery cost, the distribution of CAFOs sizes has been approximated to the cattle and swine CAFOs size distribution of other regions in the vicinity of the Great Lakes area, namely Ohio, Pennsylvania, Indiana, Michigan, and Wisconsin. The distribution of CAFOs size in each one of these regions has been approximated through a truncated normal distribution, since the possible size of livestock facilities is bounded between 300 animal units for being considered as an intensive livestock production facility REF, and 10,000 animal units in order to remove extra-large CAFOs that are outliers in the size distribution, avoiding excessive long tails distorting the distributions.
 %For cattle CAFOs, it has been found that two scenarios can be identified, a first scenario (Scenario 1) where the average size of CAFOs is larger, around 2,400 animal units based on the parameters of the states of Ohio, Wisconsin, and Michigan, and a second scenario (Scenario 2) based on the states of Pennsylvania and Indiana where the average size of CAFOs is smaller, lower than 1,500 animal units. Two CAFOs size distributions are proposed for Ontario based on each one of these scenarios, estimating the parameters of Eq. REF as the average parameters of the distributions in each scenario, as shown in \ref{fig:CAFOsSize_Scenarios}. 
-%For swine CAFOs, the size distribution patterns are similar for all the states studied, with the exception of the Wisconsin, which has been discarded due to the little number of swine facilities installed in this state. A truncated normal distribution with mean equal to 741 AUs and standard deviation equal to 456 AUs is assumed to stimate the distribution of swine CAFOs in Ontario, as shown in \ref{fig:CAFOsSize_Scenarios}.
+%For swine CAFOs, the size distribution patterns are similar for all the states studied, with the exception of the Wisconsi\ref{fig:Results_PlotSumn, which has been discarded due to the little number of swine facilities installed in this state. A truncated normal distribution with mean equal to 741 AUs and standard deviation equal to 456 AUs is assumed to stimate the distribution of swine CAFOs in Ontario, as shown in \ref{fig:CAFOsSize_Scenarios}.
 %The distribution parameters for both cattle and swine CAFOs size are shown in Table \ref{table:CAFOsSizeScenarios}.
 %The number of CAFOs in each cluster is determined through the Monte Carlo method, with the constrain that the sum of animal units of all CAFOs must not exceed the total number of animal units of Ontario, which for cattle is equal to 1,376,984 animal units for year 2019, which result in the release of 15,923 kt of manure per year and 13.27 kt of phosphorus per year, and for swine represent 506,768 animal units, 5,779 kt of manure per year, and 8.57 kt of phosphorus per year REF. The number of CAFOs belonging to each cluster are shown in Table \ref{table:CAFOsSizeScenarios}. Further details on the estimation of CAFOs size distribution can be found in the Supplementary Information, Section ??.
 %
@@ -419,11 +421,17 @@ Phosphorus is divided between the liquid and solid fractions of manure, being th
 %	}
 %\end{table}
 
-\subsubsection{Industrial sector}
-Data on individual capacities for the slaughterhouses in Ontario is not available for estimating the effects of the economies of scale, and therefore average slaughterhouse capacities of 104,017, 802,186, and $14.4 \cdot 10^6$ cattle, hog, and poultry heads slaughtered per year respectively are assumed \citep{SlaughterhouseDistribution, SlaughterhousePoultryAverageSize}, resulting in 7, 6, and 17 catlle, hog, and poultry slaughtering facilities with associated phosphorus flows of 317.4, 103.5, and 53.2 metric tonnes/$\left(\text{facility} \cdot \text{year}\right) $ respectively. Phosphorus flows from sheep and rabbit slaughtered are considered negligible. The number of slaughtered animals can be found in Table ?? of Supplementary Material.
+\subsubsection{Industrial and urban sector}
+Industrial and urban sectors are grouped since some flows belong to both sectors, particularly those related with wastewater, and the organic fraction of industrial and municipal solid waste, including food waste.
 
-\subsubsection{Urban sector}
-The distribution of phosphorus between treated water and sludge considered is 14.1\% - 85.9\% respectively \citep{PFlows_Ontario}, based on the data reproted by NPRI and WSER databases REFs, which in alignment with the distribution values reported by \citep{egle_phosphorus_2016}.
+Slaughterhouse waste is an industrial flow from which phosphorus can be effectively recovered \citep{Pearl2Kcost2}. Data on individual capacities for the slaughterhouses in Ontario is not available for estimating the effects of the economies of scale on the cost of phosphorus recovery  and, therefore, average slaughterhouse capacities are considered, which values are 104,017, 802,186, and $14.4 \cdot 10^6$ cattle, hog, and poultry heads slaughtered/$\left(\text{facility} \cdot \text{year}\right) $ respectively \citep{SlaughterhouseDistribution, SlaughterhousePoultryAverageSize}. Considering the inventory of slaughtered animals reported by \citet{SlaughterFederalRedMeat, SlaughterFederalPoultry}, 7, 6, and 17 cattle, hog, and poultry slaughtering facilities are obtained, with associated phosphorus flows of 317.4, 103.5, and 53.2 metric tonnes/$\left(\text{facility} \cdot \text{year}\right) $ respectively. Phosphorus flows from sheep and rabbit slaughtered are considered negligible due to the low number of animals slaughtered. Figure \ref{fig:Results_PlotSummary} shows that most of phosphorus can be recovered from the solid fraction of waste due to its larger phosphorus content. The variations between the minimum cost and maximum recovery scenarios are not significant for the solid slaughterhouse waste flow, however, for the liquid fraction the phosphorus recovery the difference between these two scenarios increase by a factor of 2.3, while the total recovery cost in the maximum recovery scenario increases by a factor of 3.3 times larger, as shown in Figure \ref{fig:Results_PlotSummarySpecific}, showing that the increase of phosphorus recovery efficiency results in a non-linear increase in the phosphorus recovery cost. {\color{red}{The numerical results are collected in the Supplementary Material ?}}
+%The number of slaughtered animals can be found in Table ?? of Supplementary Material.
+
+%\subsubsection{Urban sector}
+Wastewater is a large flow containing significant amounts of phosphorus. Wastewater is colledted and directed to wastewater treatment plants (WWTPs). These facilities produces a liquid water effluent with adequate environmental parameters for its being releas into the environment, and a sludge flow from the primary and second treatments. Phosphorus can be recovered from both flows, although most of the phosphorus is contained in the sludge fraction.
+The distribution of phosphorus between treated water and sludge considered is 14.1\% - 85.9\% respectively \citep{PFlows_Ontario}, based on the data reproted by NPRI and WSER databases REFs, which is in alignment with the distribution values reported by \citep{egle_phosphorus_2016}. The capacity of the wastewater treatment plants installed in Ontario, together with their phosphorus flows, have been considered to determine the effect of the economies of scale in the cost of phosphorus recovery. {\color{red}{Data on Ontario wastewater treament plants capacity and phosphorus releases is collected in the Supplementary Material}} {\color{red}{*Jorge and Roy, would you agree with including this data as part of the Suplementary Material?*}}. Figure \ref{fig:Results_PlotSummary} shows that the potential for phosphorus recovery from sludge is greater than from the WWTPs liquid fraction, as mentioned before. Little variation is observed between the minum cost and maximum recovery scenarios for the recovery of phosphorus from sledge, which implies that there exist a certain degree of homogeneity in the current technologies for phosphorus recovery from sludge, which can be appreciated in Figure \ref{fig:Results_PlotSummarySpecific}. It must be noted that the phosphorus recovery systems from sludge ashes reveal to be more effective, including the incineration cost, than the direct recovery of phosphorus from sludge due to the higher recovery efficiency of the former ones. Conversely, the phosphorus recovery from the liquid wastewater fraction show a larger variability between both scenarios considered. The phosphorus recoved in the maximum recovery scenario is 1.7 times larger than in the minimum cost scenarios. However, this increase in the phosphorus recovery efficiency result in the increase of the recovery cost by a factor of 9.6, showing that similarly to the case of the liquid fraction of slaughterhouse waste, the achievement of greater recovery efficiencies through the use of more effective technologies result in an exponential increase of recovery costs.
+
+Finally, Figure \ref{fig:Results_PlotSummary} shows that the organic fraction of industrial and municipal solid waste represent the largest potential for phosphorus recovery. However, it must be noted that this flow includes all those streams comprised by solid organic wastes other than slaughterhouse waste, including food processing industry waste, household food waste, and other municipal organic waste. {\color{red}{*Completar removing extraction*}}
 
 \subsection{Economic implications of phosphorus recovery in Ontario}
 Economic costs or saving derived from the recovery of P in the province and all implications related with economy
