--- a/PFlowsPaperv2/references.bib
+++ b/PFlowsPaperv2/references.bib
@@ -1343,3 +1343,12 @@ chapter = {6},
     howpublished = "\url{https://www150.statcan.gc.ca/n1/daily-quotidien/220228/dq220228d-cansim-eng.htm}",
     note = "[Online; accessed 15-August-2022]"
     }
+
+@misc{CAFOSAvgSizeAndNumber,
+    author = {{Statistics Canada - Statisque Canada}},
+    title = {{Selected livestock and poultry, Census of Agriculture historical data}},
+    institution  = {{Statistics Canada - Statisque Canada}},
+    year = {2022},
+    howpublished = "\url{https://www150.statcan.gc.ca/t1/tbl1/en/tv.action?pid=3210015501}",
+    note = "[Online; accessed 18-August-2022]"
+    }
