--- a/PFlowsPaperv2/PFlowsPaper.tex
+++ b/PFlowsPaperv2/PFlowsPaper.tex
@@ -201,7 +201,7 @@ However, there exist households that are not connected to any sewer systems. The
 
 Phosphorus flows in the form of food and organic waste are based on applying food loss factors for the steps associated with food processing \citep{FoodLossesFAO}, considering the food production and import values estimated in Section \ref{section:AgriSector}.
 
-\subsection{Phosphorus recovery techniques}
+\subsection{Phosphorus recovery techniques} \label{section:PRecoveryTechs}
 There currently exist different processes for phosphorus recovery from different sources which technical viability has been proven or is at advanced development stage, i.e., systems with technologies readiness level (TRL) \citep{TRLDefinitions} of 6 or above (commercial or pilot plant stage). Since the flows from different processes have different properties, the techniques for phosphorus recovery vary between sectors and flows and, therefore, their recovery efficiencies, costs, and products obtained. Table \ref{table:TechParam} shows a summary of the specifications of the phosphorus recovery technologies for different flows, including literature references where comprehensive descriptions of each system and its specifications can be found. We noted that the phosphorus recovery processes currently available exceed the systems included in this work, nonetheless the processes considered in this study are a selection of the main techniques for phosphorus recovery,
 %although different processes may have been developed through the foundations of the same technique,
 although different processes may have been developed on the foundations of the same technique,
@@ -211,6 +211,8 @@ e.g., the multiple processes based on struvite precipitation.
 %Different scenarios are studied considered the technology readiness level (TRL) of the processes in order to determine the phosphorus that could be immediately recovered using commercial technologies (Scenario 1), the phosphorus that could be recovered in a near future by using technologies above pilot plant development stage (Scenario 2), and finally  prospective assessment of phosphorus recovery systems that at early research stages (Scenario 3). 
 
 Phosphorus recovery costs include operating and annualized capital costs. Capital costs are annualized through the application of an annual capital charge ratio $\left( ACCR\right)$ as defined by \citet{towler2013chemical}, assuming a typical interest rate of 5\% and a plant lifetime of 20 years. Dynamic phosphorus recovery costs in function of the processing capacity have been considered in order to capture the economies of scale for those technologies for which sufficient data are available.
+
+In general terms, the process for phosphorus recovery and recycling can be classified into those employed for the treatment of liquid streams, which are based on the formation of precipitated through the direct processing of the liquid effluent, and those processes employed for the treatment of solid fractions, which usually require the pretreatment of the waste through an incineration stage.
 
 Phosphorus in manure represent an important flow within the agricultural sector.
 %Phosphorus can be recovered from different flows within the agricultural sector, including the production of manure. 
@@ -314,7 +316,6 @@ Municipal wastewater contains significant amounts of phosphorus that can be reco
 
 \section{Results and discussion}
 \subsection{Phosphorus flows in Ontario}
-\emph{\color{red}Showing an overview of the P flows in the province. The use of figures summarizing all the flows of the province in the shape of Sankey or network flow figures could be so great}
 
 \begin{figure}[H]
 	\centering
@@ -324,32 +325,31 @@ Municipal wastewater contains significant amounts of phosphorus that can be reco
 	\label{fig:FigFlowsSummary}
 \end{figure}
 
-Figure \ref{fig:FigFlowsSummary} summarizes the phosphorus flows in the province of Ontario. It can be observed that the flow of of phosphorus through the anthropogenic activities are divided into 3 independent networks, i.e., the flow of phosphorus involved the production and processing of food (including the treatment of wastewater), the flow of phosphorus used in the steel and chemical industries, and the phosphorus involved in the forestry industry.
+Figure \ref{fig:FigFlowsSummary} summarizes the phosphorus flows in the province of Ontario. It can be observed that phosphorus flows in anthropogenic activities can be divided into 3 independent networks, i.e., the flow of phosphorus involved the production and processing of food (including the treatment of wastewater), the flow of phosphorus used in the steel and chemical industries, and the phosphorus involved in the forestry industry.
 
-The production of animal food products exhibits a lower phosphorus use efficiency than the production of plant base products, similarly to the use effciciency of other resources such as water CITE HERE, CALCULAR ENTRA VS SALE!
+The main inflows food production and processing network are those associated with the supply of synthetic fertilizers and livestock feed, accounting for 55.6 and 21.8 kt/year respectively. Other phosphorus imports in Ontario are made in the form of food products (4.7 kt/year) and aquaculture feed imports (0.07 kt/year). Crop residues and manure are the main phosphorus waste effluent from the agricultural sector, accounting for 32.5 and 30.6 kt/year. However, it must be notted the differente properties of these materials. While crop residues can be left in the cropfields, transfering part of the phosphorus taken by crops back to soil and acting as soil amendment materials due to their carbon content REF, manure produced in intensive livestock facilities is a point source of phosphorus releases highly spatially concentrated, resulting in the accumulation of phosphorus in the vicinity of these facilities. As a consequence, the production of manure has the potential of being environmentally harmful and requires of adequate management strategies. The food processing industry involves the largest flows within the province, which can be classified plant and animal-based product, and slaughter house waste, resulting in phosphorus flows of 43.2, 10.3, and 3.8 kt/year respectively. A significant fraction of end-flows are waste flows in the form of landfill (37.5 kt/year), composting (2.1 kt/year), and anaerobic digestion (1.4 kt/year) disposals, as well as wastewater (7.8 kt/year). Phosphorus exports out of Ontario are performed through the exports of food products and livestock, accounting for 10.8 and 1.8 kt/year respectively.
 
-\subsubsection{Agricultural sector}
+Chemical industry involve significant phosphjorus flows, importing 22.2 kt/year into the province, while the exports represent 14.0 kt/year. This sector produces 0.35 kt/year of phosphorus that is classified as waste. However, an important fraction of phosphorus used by this sector (11.7 kt/ton) cannot be tracked and. therefore, it is unknown what fraction of this phopshorus can result as waste.  Steel production imports 8.3 kt/year of phosphorus, of which 7.0 kt/year ends as steel wast or slag, while the phosphorus flows in steel materials are 1.4 kt/year.
 
-\subsubsection{Industrial sector}
+Phosphorus imports from the forestry industry are 0.38 kt/year, while 2.3 kton/year of phosphorus is taken from wood harvested in Ontario. This sector releases 0.4 kton/year of phosphorus in the form of wood and pulp waste, while 0.81 kt/year of phosphorus is exported out of the province as wood, wood products or pulp and paper.
 
-\subsubsection{Urban sector}
 
 \subsection{Potential of phosphorus recovery in Ontario}
 
-EXPLAIN HERE WHAT MIN COST AND MAX COSTS MEAN OR ARE CONSIDERED
+The potential for phosphorus recovery in the province of Ontario through the  deployment of different processes for the recovery of phosphorus from different flows is assess in this section. As shown in Section \ref{section:PRecoveryTechs}, different processes can be employed for the recovery of phosphorus from the same stream. However, each system is design for operating under certain conditions and they have different processing capacities. As a result, phosphorus recovery efficiency and cost will differ between technologies for the treatment of the same flow. In order to explore this variability between phosphorus recovery systems, all the systems described in Table \ref{table:TechParam} are evaluated. {\color{red}{The results obtained in terms of phosphorus recovered and recovery cost for each technology and flow are collected in the Supplementary Material}}. Two scenarios are selected for deeper analysis, the minimum cost scenario that selects the most economical technology, and the maximum recovery scenario, comprised by the phosphorus recovery system which deployment result in the largest phosphorus recovery.
 
 \begin{figure}[H]
 	\centering
 	%	\begin{subfigure}[t]{0.5\linewidth}
-	\includegraphics[width=0.9\linewidth, trim={0cm 0cm 0cm 0cm},clip]{Figures/Results_PlotSummary.pdf} 
-	\caption{Phosphorus recovered and phosphorus recovery cost in the province of Ontario by flow. Note that the scale of broken x-axis is different.}
+	\includegraphics[width=0.85\linewidth, trim={0cm 0cm 0cm 0cm},clip]{Figures/Results_PlotSummary.pdf} 
+	\caption{Phosphorus recovered and phosphorus recovery cost in the province of Ontario by flow. Note that the scale of bottom x-axis is different for left and right axes.}
 	\label{fig:Results_PlotSummary}
 \end{figure}
 
 \begin{figure}[H]
 	\centering
 	%	\begin{subfigure}[t]{0.5\linewidth}
-	\includegraphics[width=0.9\linewidth, trim={0cm 0cm 0cm 0cm},clip]{Figures/Results_PlotSummarySpecific.pdf} 
+	\includegraphics[width=0.85\linewidth, trim={0cm 0cm 0cm 0cm},clip]{Figures/Results_PlotSummarySpecific.pdf} 
 	\caption{Average phosphorus recovered and average phosphorus recovery cost per kilogram of phosphorus recovered in the province of Ontario by flow.}
 	\label{fig:Results_PlotSummarySpecific}
 \end{figure}
@@ -429,9 +429,11 @@ Slaughterhouse waste is an industrial flow from which phosphorus can be effectiv
 
 %\subsubsection{Urban sector}
 Wastewater is a large flow containing significant amounts of phosphorus. Wastewater is colledted and directed to wastewater treatment plants (WWTPs). These facilities produces a liquid water effluent with adequate environmental parameters for its being releas into the environment, and a sludge flow from the primary and second treatments. Phosphorus can be recovered from both flows, although most of the phosphorus is contained in the sludge fraction.
-The distribution of phosphorus between treated water and sludge considered is 14.1\% - 85.9\% respectively \citep{PFlows_Ontario}, based on the data reproted by NPRI and WSER databases REFs, which is in alignment with the distribution values reported by \citep{egle_phosphorus_2016}. The capacity of the wastewater treatment plants installed in Ontario, together with their phosphorus flows, have been considered to determine the effect of the economies of scale in the cost of phosphorus recovery. {\color{red}{Data on Ontario wastewater treament plants capacity and phosphorus releases is collected in the Supplementary Material}} {\color{red}{*Jorge and Roy, would you agree with including this data as part of the Suplementary Material?*}}. Figure \ref{fig:Results_PlotSummary} shows that the potential for phosphorus recovery from sludge is greater than from the WWTPs liquid fraction, as mentioned before. Little variation is observed between the minum cost and maximum recovery scenarios for the recovery of phosphorus from sledge, which implies that there exist a certain degree of homogeneity in the current technologies for phosphorus recovery from sludge, which can be appreciated in Figure \ref{fig:Results_PlotSummarySpecific}. It must be noted that the phosphorus recovery systems from sludge ashes reveal to be more effective, including the incineration cost, than the direct recovery of phosphorus from sludge due to the higher recovery efficiency of the former ones. Conversely, the phosphorus recovery from the liquid wastewater fraction show a larger variability between both scenarios considered. The phosphorus recoved in the maximum recovery scenario is 1.7 times larger than in the minimum cost scenarios. However, this increase in the phosphorus recovery efficiency result in the increase of the recovery cost by a factor of 9.6, showing that similarly to the case of the liquid fraction of slaughterhouse waste, the achievement of greater recovery efficiencies through the use of more effective technologies result in an exponential increase of recovery costs.
+The distribution of phosphorus between treated water and sludge considered is 14.1\% - 85.9\% respectively \citep{PFlows_Ontario}, based on the data reproted by NPRI and WSER databases REFs, which is in alignment with the distribution values reported by \citep{egle_phosphorus_2016}. The capacity of the wastewater treatment plants installed in Ontario, together with their phosphorus flows, have been considered to determine the effect of the economies of scale in the cost of phosphorus recovery. {\color{red}{Data on Ontario wastewater treament plants capacity and phosphorus releases is collected in the Supplementary Material}} {\color{red}{*Jorge and Roy, would you agree with including this data as part of the Suplementary Material?*}}. Figure \ref{fig:Results_PlotSummary} shows that the potential for phosphorus recovery from sludge is greater than from the WWTPs liquid fraction, as mentioned before. Little variation is observed between the minum cost and maximum recovery scenarios for the recovery of phosphorus from sledge, which implies that there exist a certain degree of homogeneity in the current technologies for phosphorus recovery from sludge, which can be appreciated in Figure \ref{fig:Results_PlotSummarySpecific}. It must be noted that the phosphorus recovery systems from sludge ashes reveal to be more effective, including the incineration cost, than the direct recovery of phosphorus from sludge due to the higher recovery efficiency of the former ones. Conversely, the phosphorus recovery from the liquid wastewater fraction show a larger variability between both scenarios considered. The phosphorus recovered in the maximum recovery scenario is 1.7 times larger than in the minimum cost scenarios. However, this increase in the phosphorus recovery efficiency result in the increase of the recovery cost by a factor of 9.6, showing that similarly to the case of the liquid fraction of slaughterhouse waste, the achievement of greater recovery efficiencies through the use of more effective technologies result in an exponential increase of recovery costs.
 
-Finally, Figure \ref{fig:Results_PlotSummary} shows that the organic fraction of industrial and municipal solid waste represent the largest potential for phosphorus recovery. However, it must be noted that this flow includes all those streams comprised by solid organic wastes other than slaughterhouse waste, including food processing industry waste, household food waste, and other municipal organic waste. {\color{red}{*Completar removing extraction*}}
+Figure \ref{fig:Results_PlotSummary} shows that the food and organic waste represent the largest potential for phosphorus recovery. However, it must be noted that this flow includes all those streams comprised by solid organic wastes other than slaughterhouse waste, including food processing industry waste, household food waste, and other municipal organic waste. Similarly to other solid fractions, the minimum cost and maximum recovery scenario shows a narrrow variability regarding phosphorus recovered and recovery costs.
+
+Finally, there are some processes under development for the recovery of phosphorus from steel production industry, particularly from steelmaking slag. These processes are based on selective leaching and further chemical precipitation to obtain solid phosphates \citep{du2022recovery, du2019separation} or magnetic-aid calcium phosphate precipitation \citep{yokoyama2007separation}. Although these are promising processes that can result in an effective recovery of phosphorus which can be further recycled, they are at early development stages and, thus, they have not been considered in this assessment.
 
 \subsection{Economic implications of phosphorus recovery in Ontario}
 Economic costs or saving derived from the recovery of P in the province and all implications related with economy
