--- a/PFlowsPaperv2/references.bib
+++ b/PFlowsPaperv2/references.bib
@@ -1352,3 +1352,34 @@ chapter = {6},
     howpublished = "\url{https://www150.statcan.gc.ca/t1/tbl1/en/tv.action?pid=3210015501}",
     note = "[Online; accessed 18-August-2022]"
     }
+
+@article{du2022recovery,
+  title={Recovery of high-quality phosphate from steelmaking slag by a hydrometallurgical process},
+  author={Du, Chuan-ming and Gao, Xu and Ueda, Shigeru and Kitamura, Shin-ya},
+  journal={Science of The Total Environment},
+  volume={819},
+  pages={153125},
+  year={2022},
+  publisher={Elsevier}
+}
+
+@article{du2019separation,
+  title={Separation and recovery of phosphorus from steelmaking slag via a selective leaching--chemical precipitation process},
+  author={Du, Chuan-Ming and Gao, Xu and Ueda, Shigeru and Kitamura, Shin-Ya},
+  journal={Hydrometallurgy},
+  volume={189},
+  pages={105109},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@article{yokoyama2007separation,
+  title={Separation and recovery of phosphorus from steelmaking slags with the aid of a strong magnetic field},
+  author={Yokoyama, Kazuyo and Kubo, Hironari and Mori, Kazuhiro and Okada, Hidehiko and Takeuchi, Shuji and Nagasaka, Tetsuya},
+  journal={ISIJ international},
+  volume={47},
+  number={10},
+  pages={1541--1548},
+  year={2007},
+  publisher={The Iron and Steel Institute of Japan}
+}
